fix(VToolbar): set correct align-items css value

--- a/packages/vuetify/src/components/VToolbar/VToolbar.sass
+++ b/packages/vuetify/src/components/VToolbar/VToolbar.sass
@@ -4,7 +4,7 @@
 
 // Block
 .v-toolbar
-  align-items: flex-startE
+  align-items: flex-start
   display: flex
   flex-direction: column
   justify-content: space-between
